<resources>
    <string name="preference_transition_mode_title">Transition mode</string>
    <string name="preference_transition_mode_summary">Choose the animation for screen transitions</string>
    <string name="preference_scale_mode_title">Scale mode</string>
    <string name="preference_scale_mode_summary">Choose how images will be scaled on the screen</string>
    <string name="preference_show_number_title">Show screen number</string>
    <string name="preference_show_number_summary">Briefly shows the screen number in a corner</string>
    <string name="preference_invisible_corners_title">Invisible corners</string>
    <string name="preference_invisible_corners_summary">Make corner buttons invisible</string>
    <string name="preference_brigthness_title">Brightness</string>
    <string name="preference_brigthness_summary">Adjust screen brightness</string>
    <string name="ocr_prefs_color_group_title">Colors</string>
    <string name="ocr_prefs_color_group_summary">Choose custom colors</string>
    <string name="ocr_prefs_dict_background_color_title">Dictionary background color</string>
    <string name="ocr_prefs_dict_background_color_summary">Choose the color of the dictionary background</string>
    <string name="ocr_prefs_dict_expression_color_title">Dictionary expression color</string>
    <string name="ocr_prefs_dict_expression_color_summary">Choose the color to use for expressions</string>
    <string name="ocr_prefs_dict_reading_color_title">Dictionary reading color</string>
    <string name="ocr_prefs_dict_reading_color_summary">Choose the color to use for readings</string>
    <string name="ocr_prefs_dict_definition_color_title">Dictionary definition color</string>
    <string name="ocr_prefs_dict_definition_color_summary">Choose the color to use for definitions</string>
    <string name="ocr_prefs_dict_conjugation_color_title">Dictionary de-inflection rule color</string>
    <string name="ocr_prefs_dict_conjugation_color_summary">Choose the color to use for de-inflection rules</string>
    <string name="ocr_prefs_sub_def_color_title">Dictionary sub-definition number color</string>
    <string name="ocr_prefs_sub_def_color_summary">Choose the color to use for sub-definition numbers</string>
    <string name="ocr_prefs_example_prepend_color_title">Dictionary example triangle color</string>
    <string name="ocr_prefs_example_prepend_color_summary">Choose the color to use for the example triangle</string>
    <string name="ocr_prefs_example_jap_color_title">Dictionary Japanese example text color</string>
    <string name="ocr_prefs_example_jap_color_summary">Choose the color to use for the Japanese portion of the examples</string>
    <string name="ocr_prefs_example_eng_color_title">Dictionary English example text color</string>
    <string name="ocr_prefs_example_eng_color_summary">Choose the color to use for the English portion of the examples</string>
    <string name="ocr_prefs_dict_name_color_title">Dictionary name color</string>
    <string name="ocr_prefs_dict_name_color_summary">Choose the color to use for dictionary names</string>
    <string name="ocr_prefs_dict_separator_color_title">Dictionary separator color</string>
    <string name="ocr_prefs_dict_separator_color_summary">Choose the color to use for separators</string>
    <string name="ocr_prefs_dict_ocr_text_color_title">OCR text color</string>
    <string name="ocr_prefs_dict_ocr_text_color_summary">Choose the color to use for the OCR\'d text</string>
    <string name="ocr_prefs_capture_box_color_title">Capture box color</string>
    <string name="ocr_prefs_capture_box_color_summary">Choose the color of the capture box</string>
    <string name="ocr_prefs_show_bounding_boxes_color_title">Bounding box color</string>
    <string name="ocr_prefs_show_bounding_boxes_color_summary">Choose the color of the bounding boxes</string>
    <string name="ocr_prefs_freq_very_common_color_title">Very frequency common color</string>
    <string name="ocr_prefs_freq_very_common_color_summary">Choose the color representing very common frequency</string>
    <string name="ocr_prefs_freq_common_color_title">Common frequency color</string>
    <string name="ocr_prefs_freq_common_color_summary">Choose the color representing common frequency</string>
    <string name="ocr_prefs_freq_uncommon_color_title">Uncommon frequency color</string>
    <string name="ocr_prefs_freq_uncommon_summary">Choose the color representing uncommon frequency</string>
    <string name="ocr_prefs_freq_rare_color_title">Rare frequency color</string>
    <string name="ocr_prefs_freq_rare_color_summary">Choose the color representing rare frequency</string>
    <string name="ocr_prefs_word_highlight_color_title">Word highlight color</string>
    <string name="ocr_prefs_word_highlight_color_summary">Choose the background color of the current word</string>
    <string name="ocr_prefs_known_word_color_title">Known/todo word marker color</string>
    <string name="ocr_prefs_known_word_color_summary">Choose the color to use for the known/todo word marker</string>
    <string name="ocr_prefs_layout_group_title">Layout</string>
    <string name="ocr_prefs_layout_group_summary">Configure layout and visibility of on-screen elements</string>
    <string name="ocr_prefs_show_bounding_boxes_title">Show bounding boxes</string>
    <string name="ocr_prefs_show_bounding_boxes_summary">Draw thin boxes around the OCR\'d text</string>
    <string name="ocr_prefs_simplified_layout_portrait_title">Simplified layout (portrait)</string>
    <string name="ocr_prefs_simplified_layout_portrait_summary">De-clutter the OCR interface when in portrait mode</string>
    <string name="ocr_prefs_simplified_layout_landscape_title">Simplified layout (landscape)</string>
    <string name="ocr_prefs_simplified_layout_landscape_summary">De-clutter the OCR interface when in landscape mode</string>
    <string name="ocr_prefs_large_nudge_buttons_title">Large nudge buttons</string>
    <string name="ocr_prefs_large_nudge_buttons_summary">Increase size of the nudge buttons (useful for tablets)</string>
    <string name="ocr_prefs_show_text_orientation_button_title">Show text orientation button</string>
    <string name="ocr_prefs_show_text_orientation_button_summary">Show the vertical/horizontal text orientation button</string>
    <string name="ocr_prefs_show_nudge_buttons_title">Show nudge buttons</string>
    <string name="ocr_prefs_show_nudge_buttons_summary">Show the nudge up/down/left/right buttons</string>
    <string name="ocr_prefs_show_send_button_title">Show the Send button</string>
    <string name="ocr_prefs_show_send_button_summary">Show the send button</string>
    <string name="ocr_prefs_show_lookup_next_button_title">Show the next word button</string>
    <string name="ocr_prefs_show_lookup_next_button_summary">Show the \'lookup next word\' button</string>
    <string name="ocr_prefs_show_lookup_prev_button_title">Show the previous word button</string>
    <string name="ocr_prefs_show_lookup_prev_button_summary">Show the \'lookup previous word\' button</string>
    <string name="ocr_prefs_edict_group_title">EDICT Dictionary</string>
    <string name="ocr_prefs_edict_group_summary">Configure built-in EDICT dictionary</string>
    <string name="ocr_prefs_compact_definitions_title">Compact definitions</string>
    <string name="ocr_prefs_compact_definitions_summary">Remove linebreaks from definitions</string>
    <string name="ocr_prefs_epwing_group_title">EPWING Dictionaries</string>
    <string name="ocr_prefs_epwing_group_summary">Configure user-provided EPWING dictionaries</string>
    <string name="ocr_prefs_epwing_path_group_title">Paths to EPWING dictionaries</string>
    <string name="ocr_prefs_epwing_path_group_summary">You may enter up to 4 EPWING dictionaries</string>
    <string name="ocr_prefs_dics_epwing_path_1_title">Dictionary 1 \'CATALOGS\' file</string>
    <string name="ocr_prefs_dics_epwing_path_1_summary"></string>
    <string name="ocr_prefs_dics_epwing_path_2_title">Dictionary 2 \'CATALOGS\' file</string>
    <string name="ocr_prefs_dics_epwing_path_2_summary"></string>
    <string name="ocr_prefs_dics_epwing_path_3_title">Dictionary 3 \'CATALOGS\' file</string>
    <string name="ocr_prefs_dics_epwing_path_3_summary"></string>
    <string name="ocr_prefs_dics_epwing_path_4_title">Dictionary 4 \'CATALOGS\' file</string>
    <string name="ocr_prefs_dics_epwing_path_4_summary"></string>
    <string name="ocr_prefs_dics_epwing_reset_1_title">Reset Dictionary 1</string>
    <string name="ocr_prefs_dics_epwing_reset_1_summary"></string>
    <string name="ocr_prefs_dics_epwing_reset_2_title">Reset Dictionary 2</string>
    <string name="ocr_prefs_dics_epwing_reset_2_summary"></string>
    <string name="ocr_prefs_dics_epwing_reset_3_title">Reset Dictionary 3</string>
    <string name="ocr_prefs_dics_epwing_reset_3_summary"></string>
    <string name="ocr_prefs_dics_epwing_reset_4_title">Reset Dictionary 4</string>
    <string name="ocr_prefs_dics_epwing_reset_4_summary"></string>
    <string name="ocr_prefs_epwing_compact_definitions_title">Compact definitions</string>
    <string name="ocr_prefs_epwing_compact_definitions_summary">Remove linebreaks from definitions</string>
    <string name="ocr_prefs_dics_epwing_max_def_lines_title">Max lines to display</string>
    <string name="ocr_prefs_dics_epwing_max_def_lines_summary"></string>
    <string name="ocr_prefs_dics_epwing_parse_title">Parse entries (for supported dictionaries)</string>
    <string name="ocr_prefs_dics_epwing_parse_summary">Perform additional processing to determine an entry\'s expression, reading, definitions and examples. Uncheck to show raw entries. Dictionaries that support parsing:  『研究社　新和英大辞典　第５版』、 『研究社　新英和・和英中辞典』、 『広辞苑第六版』、 『大辞泉』、 『三省堂　スーパー大辞林』、 『大辞林 第2版』、 『明鏡国語辞典』。</string>
    <string name="ocr_prefs_epwing_parsed_category_title">Options for parsed entries</string>
    <string name="ocr_prefs_dics_epwing_show_examples_title">Show example sentences</string>
    <string name="ocr_prefs_dics_epwing_show_examples_summary"></string>
    <string name="ocr_prefs_dics_epwing_max_examples_title">Max examples to display</string>
    <string name="ocr_prefs_dics_epwing_max_examples_summary"></string>
    <string name="ocr_prefs_dics_compact_examples_title">Compact examples</string>
    <string name="ocr_prefs_dics_compact_examples_summary">Remove linebreaks from examples</string>
    <string name="ocr_prefs_dics_strip_examples_from_defs_title">Strip examples from the definition text</string>
    <string name="ocr_prefs_dics_strip_examples_from_defs_summary">Applies to J-J dictionaries</string>
    <string name="ocr_prefs_misc_title">Misc</string>
    <string name="ocr_prefs_misc_summary">Configure other OCR settings</string>
    <string name="ocr_prefs_force_border_title">Force Border</string>
    <string name="ocr_prefs_force_border_summary">Force 2 pixel border around text before OCRing</string>
    <string name="ocr_prefs_show_frequency_title">Show Frequency</string>
    <string name="ocr_prefs_show_frequency_summary">Show word frequency to the right of the reading</string>
    <string name="ocr_prefs_send_action_title">Send Action</string>
    <string name="ocr_prefs_send_action_summary">Action to take when the OCR Send button is tapped</string>
    <string name="ocr_prefs_word_list_save_file_category_title">Word List Save File</string>
    <string name="ocr_prefs_word_list_save_file_path_title">Word List Save File Path</string>
    <string name="ocr_prefs_word_list_save_file_path_summary"></string>
    <string name="ocr_prefs_word_list_save_file_reset_title">Reset Path</string>
    <string name="ocr_prefs_word_list_save_file_reset_summary"></string>
    <string name="ocr_prefs_word_list_save_file_format_title">Word List Save File Format</string>
    <string name="ocr_prefs_word_list_save_file_format_summary">Format to use when saving entries</string>
</resources>